# TSPbasics

./: BruteForce.cpp  BruteForce.h  CMakeLists.txt  Config.cpp  Config.h  Data.cpp  Data.h  NN.cpp  NN.h  README.md  Random.cpp  Random.h  Time.cpp  Time.h  config.txt  main.cpp
